welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: identifier expected but integer literal found.
    avance(nbPas:2);
                 ^BDRBuggle:6: error: ')' expected but '}' found.
} else if (C) {
^BDRBuggle:7: error: identifier expected but integer literal found.
    avance(nbPas:3);
                 ^BDRBuggle:8: error: ')' expected but '}' found.
} else if (R) {
^BDRBuggle:10: error: identifier expected but integer literal found.
    avance(nbPas:1);
                 ^BDRBuggle:11: error: ')' expected but '}' found.
} else if (L) {
^BDRBuggle:13: error: identifier expected but integer literal found.
    avance(nbPas:3);
                 ^BDRBuggle:14: error: ')' expected but '}' found.
} else if (I) {
^BDRBuggle:17: error: identifier expected but integer literal found.
    avance(nbPas:1);
                 ^BDRBuggle:18: error: ')' expected but '}' found.
} else if (Z) {
^BDRBuggle:19: error: identifier expected but integer literal found.
    recule(nbPas:1);
                 ^BDRBuggle:20: error: ')' expected but '}' found.
} else if (Y) {
^BDRBuggle:21: error: identifier expected but integer literal found.
    recule(nbPas:2);
                 ^BDRBuggle:22: error: ')' expected but '}' found.
} else if (X) {
^BDRBuggle:23: error: identifier expected but integer literal found.
    recule(nbPas:3);
                 ^BDRBuggle:24: error: ')' expected but '}' found.
} else if () {
^BDRBuggle:24: error: illegal start of simple expression
} else if () {
           ^BDRBuggle:29: error: ')' expected but '}' found.
	}
        ^