welcome.lessons.welcome.bdr.BDR.scala.code
litMessage()
if (A) { 
    avance();
} else if (B) {
    avance(nbPas:2);
} else if (C) {
    avance(nbPas:3);
} else if (R) {
    droite()
    avance(nbPas:1);
} else if (L) {
    gauche()
    avance(nbPas:3);
} else if (I) {
    droite()
    droite()
    avance(nbPas:1);
} else if (Z) {
    recule(nbPas:1);
} else if (Y) {
    recule(nbPas:2);
} else if (X) {
    recule(nbPas:3);
} else if () {
	clearMessage()
}
